# patient-encounter-system

./: .bandit  .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: allfiles.txt  check_tables.py  create_tables.py  database.py  db_check.py  db_test.py  main.py  reset_db.py
src/models/: appointment.py  doctor.py  patient.py
src/patient_encounter_system/: check_tables.py  create_tables.py  database.py  db_test.py  delete_my_tables.py  init_db.py  main.py
src/patient_encounter_system/models/: __init__.py  appointment.py  doctor.py  patient.py
src/patient_encounter_system/schemas/: appointment_pydantic.py  doctor_pydantic.py  patient_pydantic.py
src/patient_encounter_system/services/: appointment_service.py  doctor_service.py  patient_service.py
src/schemas/: appointment_pydantic.py  doctor_pydantic.py  patient_pydantic.py
src/services/: appointment_service.py  doctor_service.py  patient_service.py
tests/: conftest.py  test_api.py  test_appointments.py  test_doctors.py  test_patients.py
