[tool.poetry]
name = "patient-encounter-system"
version = "0.1.0"
description = ""
authors = ["vamsibt <vamsikrishnabt@gmail.com>"]
readme = "README.md"
packages = [{ include = "patient_encounter_system", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
sqlalchemy = "^2.0.46"
pymysql = "^1.1.2"
python-dotenv = "^1.2.1"
pydantic = "^2.12.5"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
email-validator = "^2.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
